<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".InputActivity"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView1"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textColor="#0289F4"
            android:textSize="45sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/btnPerInfo"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/cus_button"
            android:text="@string/btnPerInfo"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnHobby"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/cus_button"
            android:text="@string/btnHobby"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnContInfo"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/cus_button"
            android:text="@string/btnContInfo"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnWork"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/cus_button"
            android:text="@string/btnWork"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="260dp"
            android:background="@drawable/custom_button"
            android:textColor="#FFFFFF"
            android:text="@string/btnSave"/>

    </LinearLayout>
</ScrollView>