<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".OutputActivity"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/textView1"
            android:textColor="#0289F4"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="-100dp"
            android:text="@string/textView21"
            android:layout_marginStart="150dp" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="197dp"
            android:layout_marginTop="-20dp"
            android:layout_marginStart="197dp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView22"
            android:layout_marginStart="150dp" />

        <TextView
            android:id="@+id/txtDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="238dp"
            android:layout_marginTop="-20dp"
            android:layout_marginStart="238dp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView23"
            android:layout_marginStart="150dp" />

        <TextView
            android:id="@+id/txtGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="206dp"
            android:layout_marginTop="-20dp"
            android:layout_marginStart="206dp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView24"
            android:layout_marginStart="150dp" />

        <TextView
            android:id="@+id/txtIdentityCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="238dp"
            android:layout_marginTop="-19dp"
            android:layout_marginStart="238dp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/textView25"
            android:layout_marginStart="30dp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView26"
            android:layout_marginStart="60dp" />

        <TextView
            android:id="@+id/txtMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="108dp"
            android:layout_marginTop="-19dp"
            android:layout_marginStart="108dp" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView27"
            android:layout_marginStart="60dp" />

        <TextView
            android:id="@+id/txtSport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="104dp"
            android:layout_marginTop="-19dp"
            android:layout_marginStart="104dp" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView28"
            android:layout_marginStart="60dp" />

        <TextView
            android:id="@+id/txtMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="108dp"
            android:layout_marginTop="-20dp"
            android:layout_marginStart="108dp" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView29"
            android:layout_marginStart="60dp" />

        <TextView
            android:id="@+id/txtPet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="-20dp"
            android:layout_marginStart="90dp" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView30"
            android:layout_marginStart="30dp" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView31"
            android:layout_marginStart="60dp" />

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="-20dp"
            android:layout_marginStart="160dp" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView32"
            android:layout_marginStart="60dp" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="-20dp"
            android:layout_marginStart="105dp" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView33"
            android:layout_marginStart="60dp" />

        <TextView
            android:id="@+id/txtHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="-20dp"
            android:layout_marginStart="160dp" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView34"
            android:layout_marginStart="30dp" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView35"
            android:layout_marginStart="60dp" />

        <TextView
            android:id="@+id/txtJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="-19dp"
            android:layout_marginStart="95dp" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView36"
            android:layout_marginStart="60dp" />

        <TextView
            android:id="@+id/txtPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="-19dp"
            android:layout_marginStart="120dp" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView37"
            android:layout_marginStart="60dp" />

        <TextView
            android:id="@+id/txtWorkplace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="-19dp"
            android:layout_marginStart="190dp" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView38"
            android:layout_marginStart="60dp" />

        <TextView
            android:id="@+id/txtSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="108dp"
            android:layout_marginTop="-20dp"
            android:layout_marginStart="108dp" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_button"
            android:textColor="#FFFFFF"
            android:text="@string/btnOK"
            android:layout_marginStart="280dp" />
    </LinearLayout>
</ScrollView>