<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView39"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textSize="34sp"
        android:textAlignment="center"
        android:textColor="#0289F4"
        android:text="@string/textView39" />

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/txtUser"/>

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/txtPass"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_button"
        android:textColor="#FFFFFF"
        android:text="@string/btnLogin" />
</LinearLayout>