<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PersonalInformationActivity"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2B99F1"
            android:textColor="#FFFFFF"
            android:text="@string/textView2"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/textView3"
            android:textSize="20sp"
            android:layout_marginStart="20dp" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/textView4"
            android:textSize="20sp"
            android:layout_marginStart="20dp" />

        <EditText
            android:id="@+id/txtDateOfBirth"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp"
            android:inputType="date" />

        <Button
            android:id="@+id/btnChoose"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:layout_marginLeft="265dp"
            android:layout_marginTop="-60dp"
            android:background="@drawable/cus_button"
            android:text="@string/btnChoose"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/textView5"
            android:textSize="20sp"
            android:layout_marginStart="20dp" />

        <RadioGroup
            android:id="@+id/rdgGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/rdbMale" />

            <RadioButton
                android:id="@+id/rdbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:textSize="18sp"
                android:text="@string/rdbFemale" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/textView6"
            android:textSize="20sp"
            android:layout_marginStart="20dp" />

        <EditText
            android:id="@+id/txtIdentityCard"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView6.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/textView6.1"
            android:textSize="20sp"
            android:layout_marginStart="20dp" />

        <ImageView
            android:id="@+id/Image"
            android:layout_width="160dp"
            android:layout_height="126dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btnChoose1"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:layout_marginLeft="265dp"
            android:layout_marginTop="-90dp"
            android:background="@drawable/cus_button"
            android:text="@string/btnChoose"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_button"
            android:textColor="#FFFFFF"
            android:text="@string/btnConfirm"
            android:textSize="20sp"
            android:layout_marginStart="200dp" />

    </LinearLayout>
</ScrollView>