<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".WorkActivity"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/textView16"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2B99F1"
            android:textColor="#FFFFFF"
            android:text="@string/textView16"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/textView17"
            android:layout_marginStart="20dp" />

        <EditText
            android:id="@+id/txtJob"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/textView18"
            android:layout_marginStart="20dp" />

        <EditText
            android:id="@+id/txtPosition"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/textView19"
            android:layout_marginStart="20dp" />

        <EditText
            android:id="@+id/txtWorkplace"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/textView20"
            android:layout_marginStart="20dp" />

        <EditText
            android:id="@+id/txtSalary"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button"
            android:textColor="#FFFFFF"
            android:text="@string/btnConfirm"
            android:textSize="20sp"
            android:layout_marginStart="200dp" />

    </LinearLayout>
</ScrollView>